fix svg overflow

--- a/sass/all_styles.scss
+++ b/sass/all_styles.scss
@@ -744,6 +744,7 @@ button:hover {
     align-content: center;
     svg {
         height: 38vw;
+        overflow: visible;
     }
 }
 
